[package]
name = "indexedlinkedhashmap"
version = "2.0.2"
authors = ["Brandon Long"]
edition = "2021"
license = "MIT"
description = "An indexable LinkedHashMap. The user defines the data structure that controls order."
documentation = "https://docs.rs/indexedlinkedhashmap"
repository = "https://github.com/brandongraylong/rust-indexedlinkedhashmap"
readme = "README.md"
keywords = ["hashmap", "linkedhashMap", "indexedlinkedhashmap", "data-structures", "user-defined"]
categories = ["data-structures"]
exclude = [".*"]

[dev-dependencies]
rand = "0.8.5"
