[package]
name = "indexedlinkedhashmap"
version = "3.0.0"
authors = ["Brandon Long"]
edition = "2021"
license = "MIT"
description = "An indexable LinkedHashMap. The user defines the data structure that controls order."
documentation = "https://docs.rs/indexedlinkedhashmap"
repository = "https://github.com/brandongraylong/rust-indexedlinkedhashmap"
readme = "README.md"
keywords = ["hashmap", "linkedhashMap", "indexedlinkedhashmap", "data-structures", "user-defined"]
categories = ["data-structures"]
exclude = [".*"]

[features]
collections_ordering_vec = []
collections_ordering_binary_heap = []
